--- a/pom.xml
+++ b/pom.xml
@@ -51,12 +51,24 @@
       <version>2.3.4-GA</version>
       <scope>provided</scope>
     </dependency>
-    <dependency>
-      <groupId>org.exoplatform.core</groupId>
-      <artifactId>exo.core.component.organization.api</artifactId>
-      <version>2.3.4-GA</version>
-      <scope>provided</scope>
-    </dependency>
+      <dependency>
+          <groupId>org.exoplatform.core</groupId>
+          <artifactId>exo.core.component.organization.api</artifactId>
+          <version>2.3.4-GA</version>
+          <scope>provided</scope>
+      </dependency>
+      <dependency>
+          <groupId>org.exoplatform.portal</groupId>
+          <artifactId>exo.portal.component.portal</artifactId>
+          <version>3.2.3-PLF-SNAPSHOT</version>
+          <scope>provided</scope>
+      </dependency>
+      <dependency>
+          <groupId>org.exoplatform.portal</groupId>
+          <artifactId>exo.portal.webui.portal</artifactId>
+          <version>3.2.3-PLF-SNAPSHOT</version>
+          <scope>provided</scope>
+      </dependency>
 
     <!-- Dependencies for war overlay -->
     <dependency>
